plugins {
    id 'java'
    id 'application'
}

group 'com.shade'
version '0.1.24'

application {
    mainClass = 'com.shade.platform.Launcher'
    executableDir = ''
    applicationDefaultJvmArgs = [
            // Required for UIUtils#minimizePanel
            '--add-opens', 'java.desktop/javax.swing.plaf.basic=ALL-UNNAMED'
    ]
}

dependencies {
    implementation project(':decima-ui')
    implementation project(':decima-ext-model-exporter')
    implementation project(':decima-ext-model-viewer')
    implementation project(':decima-ext-shader-viewer')
    implementation project(':decima-ext-texture-viewer')

    implementation project(':decima-app')
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
            vendor = JvmVendorSpec.ADOPTIUM
        }
    }

    test {
        useJUnitPlatform()
    }

    dependencies {
        // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
        implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'

        // https://mvnrepository.com/artifact/org.junit.jupiter
        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.1'
        testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.1'
        testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.1'

        // https://mvnrepository.com/artifact/nl.jqno.equalsverifier/equalsverifier
        testImplementation group: 'nl.jqno.equalsverifier', name: 'equalsverifier', version: '3.17.1'
    }
}
